--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>forms</title>
+    <title>iframe</title>
 </head>
 <body>
-    <iframe src="https://www.geosaitebi.com" width="400px" height="400px"></iframe>
+    <iframe src="https://www.geosaitebi.com" width="1240px" height="900px"></iframe>
 </body>
 </html>
